tests/rosetta/out/Smalltalk/babylonian-spiral.out
/tmp/babylonian-spiral.st:6: parse error, expected ']'
